<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/vfGameSetup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:id="@+id/lytStartMenu"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:paddingLeft="5dp"
	    android:paddingRight="5dp"
	    android:orientation="vertical" >
	    
	    <TextView
	        android:id="@+id/start_title"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:layout_marginTop="20dp"
	        android:layout_marginBottom="20dp"
	        android:text="@string/start_title"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	    
	    <Button
	        android:id="@+id/start_button"
	        android:layout_width="fill_parent"
	        android:layout_height="75dp"
	        android:text="@string/start_button" />
	    
	    <Button
	        android:id="@+id/btnEditProfiles"
	        android:layout_width="fill_parent"
	        android:layout_height="75dp"
	        android:text="@string/edit_profiles" />
	    
	    <Button
	        android:id="@+id/btnEditPlayers"
	        android:layout_width="fill_parent"
	        android:layout_height="75dp"
	        android:text="@string/edit_players" />
	</LinearLayout>
	
	<LinearLayout
        android:id="@+id/lytGameType"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:paddingLeft="5dp"
	    android:paddingRight="5dp"
	    android:orientation="vertical" >
	    	
	    <TextView
	        android:id="@+id/game_type_title"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:layout_marginTop="20dp"
	        android:layout_marginBottom="20dp"
	        android:text="@string/game_type_title"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	    
	    <Button
	        android:id="@+id/standard_button"
	        android:layout_width="fill_parent"
	        android:layout_height="75dp"
	        android:text="@string/standard_button" />
	    
	    <Button
	        android:id="@+id/commander_button"
	        android:layout_width="fill_parent"
	        android:layout_height="75dp"
	        android:text="@string/commander_button" />
	    
	    <Button
	        android:id="@+id/custom_button"
	        android:layout_width="fill_parent"
	        android:layout_height="75dp"
	        android:text="@string/custom_button" />
	</LinearLayout>
	
	<LinearLayout 
	    android:id="@+id/lytPlayerCount"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:paddingLeft="5dp"
	    android:paddingRight="5dp"
	    android:orientation="vertical" >
	    
	    <TextView
	        android:id="@+id/player_count_title"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:layout_marginTop="20dp"
	        android:layout_marginBottom="20dp"
	        android:text="@string/player_count_title"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	    
	    <Button
	        android:id="@+id/btnOnePlayer"
	        android:layout_width="fill_parent"
	        android:layout_height="75dp"
	        android:gravity="center"
	        android:text="@string/one_player" />
	    
	    <Button
	        android:id="@+id/btnTwoPlayer"
	        android:layout_width="fill_parent"
	        android:layout_height="75dp"
	        android:gravity="center"
	        android:text="@string/two_player" />
	    
	    <Button
	        android:id="@+id/btnThreePlayer"
	        android:layout_width="fill_parent"
	        android:layout_height="75dp"
	        android:gravity="center"
	        android:text="@string/three_player" />
	    
	    <Button
	        android:id="@+id/btnFourPlayer"
	        android:layout_width="fill_parent"
	        android:layout_height="75dp"
	        android:gravity="center"
	        android:text="@string/four_player" />
	</LinearLayout>
</ViewFlipper>