<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
	<TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content" >
		       
		<TextView
		    android:id="@+id/txtLife"
		    android:layout_width="0dp"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
		    android:gravity="center"
		    android:includeFontPadding="false"
		    android:padding="0sp"
		    android:textSize="75sp"
		    android:text="20" />

	    <TextView
		    android:id="@+id/txtCommanderLife"
		    android:layout_width="0dp"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
		    android:includeFontPadding="false"
		    android:gravity="center"
		    android:padding="0sp"
		    android:text="15"
		    android:textSize="75sp" />
	    
	    <TextView
		    android:id="@+id/txtPoisonLife"
		    android:layout_width="0dp"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
		    android:includeFontPadding="false"
		    android:gravity="center"
		    android:padding="0sp"
		    android:text="12"
		    android:textSize="75sp" />
	</TableRow>
	
	<TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content" >
			
		<Button
		    android:id="@+id/btnAddOne"
		    android:layout_width="0dp"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
		    android:text="@string/add_one" />
		
		<Button
		    android:id="@+id/btnAddFive"
		    android:layout_width="0dp"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
		    android:text="@string/add_five" />

		<Button
		    android:id="@+id/btnApplyToAll"
		    android:layout_width="0dp"
		    android:layout_height="match_parent"
		    android:layout_weight="2"
		    android:text="@string/apply_to_all" />
	</TableRow>
	
	<TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content" >

		<Button
		    android:id="@+id/btnSubtractOne"
		    android:layout_width="0dp"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
		    android:text="@string/subtract_one" />
		
		<Button
		    android:id="@+id/btnSubtractFive"
		    android:layout_width="0dp"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
		    android:text="@string/subtract_five" />

		<Button
		    android:id="@+id/btnApplyToOpponents"
		    android:layout_width="0dp"
		    android:layout_height="match_parent"
		    android:layout_weight="2"
		    android:text="@string/apply_to_opponents" />
	</TableRow>
	<TableRow android:id="@+id/tableRow4"
        	  android:layout_width="wrap_content">
	    <Button
		    android:id="@+id/btnApply"
		    android:layout_width="0dp"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
		    android:text="@string/apply" />
		<Button
		    android:id="@+id/btnCancel"
		    android:layout_width="0dp"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
		    android:text="@string/cancel" />
	</TableRow>
</TableLayout>