<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="7" >
    
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="0dip"
        android:layout_height="0dip"
        android:layout_weight="1" >
        
        <TextView
		    android:id="@+id/txtDiceOutput"
		    android:layout_width="0dip"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
		    android:gravity="center"
		    android:padding="0dp"
		    android:includeFontPadding="false"
		    android:textSize="200sp"
		    android:text="20"
		    android:layout_column="0" />       
    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="0dip"
        android:layout_height="0dip"
        android:layout_weight="6" >
        
        <Button
		    android:id="@+id/btnCoin"
		    android:layout_width="0dp"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
		    android:text="@string/coin" />
        
        <Button
		    android:id="@+id/btnD4"
		    android:layout_width="0dp"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
		    android:text="@string/d4" />
        
        <Button
		    android:id="@+id/btnD6"
		    android:layout_width="0dp"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
		    android:text="@string/d6" />
        
        <Button
		    android:id="@+id/btnD10"
		    android:layout_width="0dp"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
		    android:text="@string/d10" />
        
        <Button
		    android:id="@+id/btnD20"
		    android:layout_width="0dp"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
		    android:text="@string/d20" />
    </TableRow>

</TableLayout>